2024-02-13 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSError.m: Make -description and -localizedDescription formats
	match those used by OSX (14.3.1).

2024-02-12 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSException.m: Prefer objc_set_unexpected() to the older
	_objc_unexpected_exception for setting handler.  Should cure problem
	where _objc_unexpected_exception exists in library but not header.

2024-02-11 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSURLProtocol.h:
	* Source/GSEasyHandle.m:
	* Source/GSHTTPURLProtocol.m:
	* Source/GSNativeProtocol.m:
	* Source/NSURLProtocol.m:
	* Source/NSURLSession.m:
	Add +canInitWithTask: and altered code to differentiate between
	protocols which can be used with NSURLConnection and those which
	can be used with NSURLSession to fix #302

2024-02-11 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLocale.m: (+canonicalLocaleIdentifierFromString:)
	Fix for #368 ... then check for presence of huphen...underscore script
	identifier and delete it, as suggested by the existing comments.
	Avoids the exception.
	* Tests/base/NSLocale/general.m: Simple testcase

2024-02-02 Richard Frith-Macdonald <rfm@gnu.org>

	Source/NSString.m: Return empty string of correct class when loading
	from an empty file or URL.
	Source/Additions/GSMime.m: minor optimisation usng more efficient
	method to append headers to mutable data object.

2024-02-01 Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSProcessInfo.m:
	* Headers/Foundation/NSProcessInfo.h:
	Initialize Android process with current locale and system time zone.

2024-02-01 Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSLocale.m: Fix -countryCode incorrectly returning language
	code.

2024-01-30 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFileHandle.m:
	* Source/GSPrivate.h:
	* Source/GSSocketStream.m:
	* Source/GSStream.m:
	* Source/unix/GSRunLoopCtxt.m:
	Make GSTcpTune options available to streams as well as file handles.