@@ -2247,6 +2247,14 @@ setNonBlocking(SOCKET fd)
         }
       else
         {
+#if	defined(_WIN32)
+	  if (WSAECONNABORTED == eno)
+	    {
+	      readLen = 0;	// Read end of file
+	      readLen = -1;
+	    }
+	  else
+#endif
           if (socketWouldBlock(eno))
             {
               /* We need an event from the operating system
@@ -2259,8 +2267,8 @@ setNonBlocking(SOCKET fd)
               NSError	*e = [NSError _systemError: eno];
 
               [self _recordError: e];
+	      readLen = -1;
             }
-          readLen = -1;
         }
     }
   else if (readLen == 0)
@@ -2300,6 +2308,10 @@ setNonBlocking(SOCKET fd)
       NSAssert([_sibling streamStatus] != NSStreamStatusClosed,
 	@"Received event for closed stream");
       [_sibling _dispatch];
+    }
+  else if ([self streamStatus] == NSStreamStatusAtEnd)
+    {
+      [self _sendEvent: NSStreamEventEndEncountered];
     }
   else if ([self streamStatus] == NSStreamStatusError)
     {
@@ -2529,20 +2541,29 @@ setNonBlocking(SOCKET fd)
         }
       else
         {
+#if	defined(_WIN32)
+	  if (WSAECONNABORTED == eno)
+	    {
+	      [_sibling _setStatus:  NSStreamStatusAtEnd];
+	      writeLen = 0;
+	    }
+	  else
+#endif
           if (socketWouldBlock(eno))
             {
               /* We need an event from the operating system
                * to tell us we can start writing again.
                */
               [self _setStatus: NSStreamStatusWriting];
+              writeLen = -1;
             }
           else
             {
               NSError	*e = [NSError _systemError: eno];
 
               [self _recordError: e];
+              writeLen = -1;
             }
-          writeLen = -1;
         }
     }
   else
@@ -2793,6 +2814,10 @@ setNonBlocking(SOCKET fd)
       NSAssert([_sibling streamStatus] != NSStreamStatusClosed,
 	@"Received event for closed stream");
       [_sibling _dispatch];
+    }
+  else if ([self streamStatus] == NSStreamStatusAtEnd)
+    {
+      [self _sendEvent: NSStreamEventEndEncountered];
     }
   else if ([self streamStatus] == NSStreamStatusError)
     {
@@ -3182,7 +3207,7 @@ setNonBlocking(SOCKET fd)
       [outs _setSibling: ins];
       *outputStream = (NSOutputStream*)outs;
     }
-  /* Now the streams are redy to be opened.
+  /* Now the streams are ready to be opened.
    */
 }
 
